--- a/config.toml
+++ b/config.toml
@@ -35,15 +35,15 @@ pygmentsStyle = "tango"
 # Top-level navigation (horizontal)
 
 [[menu.main]]
-    name = "What is Kubeflow?"
+    name = "什么是 Kubeflow?"
     weight = -103
     url = "/docs/about/kubeflow/"
 [[menu.main]]
-    name = "Documentation"
+    name = "文档"
     weight = -101
     url = "/docs/"
 [[menu.main]]
-    name = "Blog"
+    name = "博客"
     weight = -100
     url = "https://medium.com/kubeflow"
 [[menu.main]]
